@@ -2,6 +2,7 @@
 	* can run doctests via 'setup.py test'
 	* HilbertSpace.fourier()
 	* HilbertArray.diag()
+	* HilbertArray.measure()
 
 === qitensor-0.9 (Dan Stahlke, 2011-04-17) ===
 	* random_isometry
